--- a/src/userspace/Makefile
+++ b/src/userspace/Makefile
@@ -5,18 +5,21 @@
 #
 # Makefile for the multiwii userspace tools 
 
-CFLAGS	?= -O2  -std=c99 -D_GNU_SOURCE 
-# When debugging, use the following instead
-#CFLAGS	:= -O -g -std=c99
-CFLAGS	+= -Wall  
 
-#
 
-#CFLAGS += -std=gnu99 
+CFLAGS ?= -std=c99 -D_GNU_SOURCE
+
+ifeq ($(VERBOSE_DEBUG),true)
+	# When debugging, use the following instead
+	CFLAGS	+=-O -g -DVERBOSE_DEBUG
+else
+	CFLAGS	+=-Wall -O2
+endif
+
 
 #-Wstrict-prototypes -Wshadow -Wpointer-arith -Wcast-qual \
-#		   -Wcast-align -Wwrite-strings -Wnested-externs -Winline \
-#		   -W -Wundef -Wmissing-prototypes -Iinclude
+#	-Wcast-align -Wwrite-strings -Wnested-externs -Winline \
+#	-W -Wundef -Wmissing-prototypes 
 
 MWI_TARGETS=  mwi
 
@@ -25,7 +28,7 @@ MWI_TARGETS=  mwi
 # target
 #
 mwi: config.o imu.o main.c multiwii.o output.o rc.o sensors.o serial.o 
-	$(CC) $(CFLAGS) $(LDFLAGS) -lrt -lm -o $@ $^
+	$(CC) $(CFLAGS) -lrt -lm -o $@ $^
 
 
 # Commands
@@ -36,10 +39,14 @@ all-mwi: $(MWI_TARGETS)
 clean-mwi:
 	$(RM) *.o $(MWI_TARGETS)
 
+install-mwi:$(MWI_TARGETS)
+	cp $(MWI_TARGETS) ../
 
 all: all-mwi
 
 
 clean: clean-mwi
+
+install: install-mwi
 
 
